target/kubernetes/kubernetes.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/vcs-url: https://github.com/schmti/quarkus-webinar.git
    app.quarkus.io/build-timestamp: 2022-09-12 - 09:39:27 +0000
    app.quarkus.io/commit-id: 28f74816c560004e167ca4fed93ab551b191169f
  labels:
    app.kubernetes.io/name: webinar-demo
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  name: webinar-demo
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app.kubernetes.io/name: webinar-demo
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.quarkus.io/vcs-url: https://github.com/schmti/quarkus-webinar.git
    app.quarkus.io/build-timestamp: 2022-09-12 - 09:39:27 +0000
    app.quarkus.io/commit-id: 28f74816c560004e167ca4fed93ab551b191169f
  labels:
    app.kubernetes.io/name: webinar-demo
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  name: webinar-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: webinar-demo
      app.kubernetes.io/version: 1.0.0-SNAPSHOT
  template:
    metadata:
      annotations:
        app.quarkus.io/vcs-url: https://github.com/schmti/quarkus-webinar.git
        app.quarkus.io/build-timestamp: 2022-09-12 - 09:39:27 +0000
        app.quarkus.io/commit-id: 28f74816c560004e167ca4fed93ab551b191169f
      labels:
        app.kubernetes.io/name: webinar-demo
        app.kubernetes.io/version: 1.0.0-SNAPSHOT
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: na/webinar-demo:1.0.0-SNAPSHOT
        imagePullPolicy: IfNotPresent
        name: webinar-demo
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
      serviceAccount: webinar-demo
