target/kubernetes/openshift.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/build-timestamp: 2022-09-12 - 09:39:27 +0000
    app.openshift.io/vcs-url: https://github.com/schmti/quarkus-webinar.git
    app.quarkus.io/commit-id: 28f74816c560004e167ca4fed93ab551b191169f
    app.quarkus.io/vcs-url: https://github.com/schmti/quarkus-webinar.git
  labels:
    app.kubernetes.io/name: webinar-demo
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.openshift.io/runtime: quarkus
  name: webinar-demo
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app.kubernetes.io/name: webinar-demo
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  type: ClusterIP
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    app.quarkus.io/build-timestamp: 2022-09-12 - 09:39:27 +0000
    app.openshift.io/vcs-url: https://github.com/schmti/quarkus-webinar.git
    app.quarkus.io/commit-id: 28f74816c560004e167ca4fed93ab551b191169f
    app.quarkus.io/vcs-url: https://github.com/schmti/quarkus-webinar.git
  labels:
    app.kubernetes.io/name: webinar-demo
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.openshift.io/runtime: quarkus
  name: webinar-demo
spec:
  replicas: 1
  selector:
    app.kubernetes.io/name: webinar-demo
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  template:
    metadata:
      annotations:
        app.quarkus.io/build-timestamp: 2022-09-12 - 09:39:27 +0000
        app.openshift.io/vcs-url: https://github.com/schmti/quarkus-webinar.git
        app.quarkus.io/commit-id: 28f74816c560004e167ca4fed93ab551b191169f
        app.quarkus.io/vcs-url: https://github.com/schmti/quarkus-webinar.git
      labels:
        app.kubernetes.io/name: webinar-demo
        app.kubernetes.io/version: 1.0.0-SNAPSHOT
        app.openshift.io/runtime: quarkus
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: JAVA_CLASSPATH
          value: /deployments/lib/io.quarkus.quarkus-security-runtime-spi-1.8.3.Final.jar:/deployments/lib/io.quarkus.quarkus-development-mode-spi-1.8.3.Final.jar:/deployments/lib/org.reactivestreams.reactive-streams-1.0.3.jar:/deployments/lib/io.smallrye.reactive.mutiny-0.7.0.jar:/deployments/lib/io.quarkus.security.quarkus-security-1.1.2.Final.jar:/deployments/lib/jakarta.el.jakarta.el-api-3.0.3.jar:/deployments/lib/jakarta.interceptor.jakarta.interceptor-api-1.2.5.jar:/deployments/lib/jakarta [...]
        - name: JAVA_OPTIONS
          value: -Djava.util.logging.manager=org.jboss.logmanager.LogManager
        - name: JAVA_APP_JAR
          value: /deployments/webinar-demo-1.0.0-SNAPSHOT-runner.jar
        - name: JAVA_LIB_DIR
          value: /deployments/lib
        image: na/webinar-demo:1.0.0-SNAPSHOT
        imagePullPolicy: IfNotPresent
        name: webinar-demo
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
      serviceAccount: webinar-demo
  triggers:
  - imageChangeParams:
      automatic: true
      containerNames:
      - webinar-demo
      from:
        kind: ImageStreamTag
        name: webinar-demo:1.0.0-SNAPSHOT
    type: ImageChange
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.quarkus.io/build-timestamp: 2022-09-12 - 09:39:27 +0000
    app.openshift.io/vcs-url: https://github.com/schmti/quarkus-webinar.git
    app.quarkus.io/commit-id: 28f74816c560004e167ca4fed93ab551b191169f
    app.quarkus.io/vcs-url: https://github.com/schmti/quarkus-webinar.git
  labels:
    app.kubernetes.io/name: webinar-demo
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.openshift.io/runtime: quarkus
  name: webinar-demo
spec:
  host: ""
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: webinar-demo
